text alignment fix

--- a/style/main.scss
+++ b/style/main.scss
@@ -50,20 +50,19 @@ div.sidebar-scrollbox {
 
 td.header_image {
   padding: 10px;
-  align: center;
   width: 200px;
 }
 
 td.header_menu {
   font-size: 20;
   width: 100px;
-  align: center;
+  text-align: center;
 }
 
 td.header_login {
   padding: 10px;
   width: 100px;
-  align: center;
+  text-align: center;
 }
 
 a.header {
